# vcstool

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.rst  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  README.rst  SECURITY.md  publish-python.yaml  pyproject.toml  ruff.toml  setup.py  stdeb.cfg
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  release.yml
scripts/: vcs  vcs-branch  vcs-bzr  vcs-custom  vcs-delete  vcs-diff  vcs-export  vcs-git  vcs-help  vcs-hg  vcs-import  vcs-log  vcs-pull  vcs-push  vcs-remotes  vcs-status  vcs-svn  vcs-validate
test/: bad.repos  branch.txt  commands.txt  delete.txt  export_exact.txt  export_exact_with_tags.txt  import.txt  import_extends.txt  import_shallow.txt  list.repos  list2.repos  list_extends.repos  list_extends_loop_child.repos  list_extends_loop_parent.repos  pull.txt  reimport.txt  reimport_force.txt  reimport_skip.txt  remotes_repos.txt  status.txt  test_commands.py  test_flake8.py  test_options.py  validate.txt  validate2.txt  validate_bad.txt  validate_hide.txt
vcs2l/: __init__.py  crawler.py  errors.py  executor.py  util.py
vcs2l-completion/: vcs.fish
vcs2l/clients/: __init__.py  bzr.py  git.py  hg.py  none.py  svn.py  tar.py  vcs_base.py  zip.py
vcs2l/commands/: __init__.py  branch.py  command.py  custom.py  delete.py  diff.py  export.py  help.py  import_.py  log.py  pull.py  push.py  remotes.py  status.py  validate.py  vcs.py
vcstool/: __init__.py  errors.py  executor.py
vcstool/commands/: help.py
